# smile_data_formatter

./: .gitignore  CMakeLists.txt  README.md  create_canonical_data.sh  face_points.txt  format_mouth_data.py  queries_groundtruth.txt  queries_in.txt
include/: CanonicalParse.h  Container.h  NormalParse.h  Pow2Assert.h  StringLib.h  ddFileIO.h
src/: CanonicalParse.cpp  NormalParse.cpp  Pow2Assert.cpp  main.cpp
